--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,8 +27,6 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6"
+    "@typescript-eslint/eslint-plugin": "^5.54.1"
   }
 }
